# Syntelligencex

./: .eslintrc.ts  .gitignore  LICENSE  README.md  SContruct  create_project_structure.sh  mypy.ini  pyproject.toml  scratch.txt
src/application/services/: agent_management_service.py  artifact_services.py  case_analysis_service.py  case_event_service.py  case_file_service.py  case_managment_service.py  case_visualization_service.py  case_worker_service.py  plan_item_service.py  resource_management_service.py  sentry_service.py
src/domain/: aggregates.py  commands.py  entities.py  events.py  ports.py  value_objects.py
src/domain/artifacts/: commands.py  entities.py  events.py  value_objects.py
src/infrastructure/: repositories.py
src/infrastructure/ai/: lang_chain_client.py
src/interfaces/: api.py
