[tool.poetry]
name = "syntelligence"
version = "0.1.0"
description = ""
authors = ["Samuel Prime"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
